35195 Support functions on data export Implemented function and test for usage